Name:                   heroku-build
Version:                0.0.0
Author:                 Pat Brisbin <pbrisbin@gmail.com>
Maintainer:             Pat Brisbin <pbrisbin@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      HerokuBuild
  Other-Modules:        HerokuBuild.JSON
  Default-Extensions:   OverloadedStrings
  Build-Depends:        base  >= 4    && < 5
                      , aeson >= 0.6  && < 0.8
                      , text  >= 0.11 && < 2.0

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Default-Extensions:   OverloadedStrings
  Build-Depends:        base
                      , hspec
                      , aeson
                      , bytestring
                      , text

Source-Repository head
  Type:                 git
--  Location:             
