Name:                   heroku-build
Version:                0.0.0
Author:                 Pat Brisbin <pbrisbin@gmail.com>
Maintainer:             Pat Brisbin <pbrisbin@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Interact with the Heroku Build API
Description:            Interact with the Heroku Build API
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      HerokuBuild
                      , HerokuBuild.JSON
                      , HerokuBuild.API
                      , HerokuBuild.Options
  GHC-Options:          -Wall
  Default-Extensions:   OverloadedStrings
  Build-Depends:        base                 >= 4.6.0  && <  5
                      , aeson                >= 0.6    && < 0.8
                      , bytestring           >= 0.10.4 && < 0.11
                      , text                 >= 0.11   && < 2.0
                      , optparse-applicative >= 0.9.0  && < 1.0
                      , http-conduit         >= 2.1.2  && < 3.0
                      , http-types

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Default-Extensions:   OverloadedStrings
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , heroku-build
                      , hspec
                      , aeson
                      , bytestring

Executable heroku-build
  Default-Language:     Haskell2010
  Main-Is:              main.hs
  GHC-Options:          -Wall
  Default-Extensions:   OverloadedStrings
  Build-Depends:        base
                      , heroku-build
                      , bytestring
                      , base64-bytestring

Source-Repository head
  Type:                 git
  Location:             https://github.com/pbrisbin/heroku-build
