name:                   heroku-build
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Interact with the Heroku Build API
description:            Interact with the Heroku Build API
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      HerokuBuild
                      , HerokuBuild.JSON
                      , HerokuBuild.API
                      , HerokuBuild.Options
  ghc-options:          -Wall
  build-depends:        base
                      , aeson
                      , bytestring
                      , text
                      , optparse-applicative
                      , http-conduit
                      , http-types

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -Werror
  main-is:              Spec.hs
  build-depends:        base
                      , heroku-build
                      , hspec
                      , aeson
                      , bytestring

executable heroku-build
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall
  build-depends:        base
                      , heroku-build
                      , bytestring
                      , base64-bytestring

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/heroku-build
